[DOC] Documentación completa de Build Scripts y workflows CONTEXTO: - Necesidad de documentar flujos de compilación AAA+ y uso del motor. - Clarificar proceso Ctrl+C con opciones S/N/no-responder. - Documentar activación de GPU para máximo rendimiento. MECÁNICA: - Creado BUILD_WORKFLOWS.md (520+ líneas) con 5 workflows completos. - Workflow 1: AAA+ Certification (build.bat → Ctrl+C+S → test.bat). - Workflow 2: Development Iteration (compilación iterativa rápida). - Workflow 3: Production Runtime (Ctrl+C sin responder → GPU activa). - Workflow 4: Hot Reload (run.bat sin recompilar). - Workflow 5: Clean Build (clean.bat → build.bat → test.bat). - Documentado proceso de interrupción con 3 opciones de prompt. - Actualizado README.md y QUICK_START.md con referencias. ARCHIVOS: - docs/BUILD_WORKFLOWS.md (NUEVO): Guía completa de workflows - docs/QUICK_START.md: Sección BUILD SCRIPTS REFERENCE - README.md: Sección 3.2 actualizada con workflows AAA+